--- a/app/views/address_books/new.html.erb
+++ b/app/views/address_books/new.html.erb
@@ -23,6 +23,12 @@
     <%= f.label :email %><br />
     <%= f.text_field :email %>
   </p>
+
+  <p>
+    <%= f.label :tags %><br/>
+    <%= text_field_tag :tags %>
+    <span>Add comma separated mutliple tags</span>
+  </p>
   <p>
     <%= f.submit 'Create' %>
   </p>
