validation added for phone, will paginate added to index action

--- a/app/views/layouts/address_books.html.erb
+++ b/app/views/layouts/address_books.html.erb
@@ -7,7 +7,7 @@
   <title>AddressBooks: <%= controller.action_name %></title>
   <%= stylesheet_link_tag 'scaffold' %>
   <%= javascript_include_tag 'jquery.1.4.2.min', 'jquery.autocomplete.min.js'  %>
-  <%= stylesheet_link_tag "jquery.autocomplete" %>
+  <%= stylesheet_link_tag "jquery.autocomplete", "pagination" %>
   <script>
     jQuery(document).ready(function(){
       jQuery("#address_book_city").autocomplete('/address_books/get_city_list', {'limit': 10 });
