--- a/app/views/address_books/index.html.erb
+++ b/app/views/address_books/index.html.erb
@@ -1,26 +1,34 @@
 <h1>Listing address_books</h1>
 
-<table>
-  <tr>
+<table width="100%">
+  <tr class="header">
     <th>Name</th>
     <th>Address</th>
     <th>City</th>
     <th>Phone</th>
     <th>Email</th>
+    <th>Actions</th>
   </tr>
+  <tr><td colspan="6" align="right"><%= page_entries_info @address_books %></td></tr>
+  <tr><td colspan="6" align="right"><% paginated_section @address_books do %></td></tr>
 
 <% @address_books.each do |address_book| %>
-  <tr>
+  <tr class="<%= cycle 'odd', 'even'  %>">
     <td><%=h address_book.name %></td>
     <td><%=h address_book.address %></td>
     <td><%=h address_book.city %></td>
     <td><%=h address_book.phone %></td>
     <td><%=h address_book.email %></td>
-    <td><%= link_to 'Show', address_book %></td>
-    <td><%= link_to 'Edit', edit_address_book_path(address_book) %></td>
-    <td><%= link_to 'Destroy', address_book, :confirm => 'Are you sure?', :method => :delete %></td>
+    <td align="center">
+      <%= link_to 'Show', address_book %> |
+      <%= link_to 'Edit', edit_address_book_path(address_book) %> |
+      <%= link_to 'Destroy', address_book, :confirm => 'Are you sure?', :method => :delete %>
+    </td>
+    
   </tr>
+
 <% end %>
+<tr><td colspan="6" align="right"><% end %></td></tr>
 </table>
 
 <br />
