home page added , top 5 cities are added to home page with random 5 persons

--- a/app/views/layouts/address_books.html.erb
+++ b/app/views/layouts/address_books.html.erb
@@ -14,9 +14,12 @@
     });
   </script>
 
-
 </head>
 <body>
+
+  <div>
+    <%= link_to "Home", root_url %>
+  </div>
 
 <p style="color: green"><%= notice %></p>
 
