links added to layout to easily navigation

--- a/app/views/layouts/address_books.html.erb
+++ b/app/views/layouts/address_books.html.erb
@@ -18,7 +18,9 @@
 <body>
 
   <div>
-    <%= link_to "Home", root_url %>
+    <%= link_to "Home", root_url %> |
+    <%= link_to "New Address Book", new_address_book_path %> |
+    <%= link_to "Address Books List", address_books_path %>
   </div>
 
 <p style="color: green"><%= notice %></p>
